Cycles deformation motion blur not working with shapekeys in curves #40194

Closed
opened 2014-05-14 16:10:23 +02:00 by Juan Pablo Bouza · 7 comments

Kubuntu 13.04

Blender hash 2149886, 2014/05/13

I've attached a sample blend file.

In cycles, curves deformed with shapekeys don't get deformation motion blur.

In the file you have a curve with an animated shapekey deformation at the left, and at the right side, another curve animated in a similar way but with hook deformation. Hooks do get blurred, shapekeys don't.

curve_def_blur_bug.blend

Kubuntu 13.04 Blender hash 2149886, 2014/05/13 I've attached a sample blend file. In cycles, curves deformed with shapekeys don't get deformation motion blur. In the file you have a curve with an animated shapekey deformation at the left, and at the right side, another curve animated in a similar way but with hook deformation. Hooks do get blurred, shapekeys don't. [curve_def_blur_bug.blend](https://archive.blender.org/developer/F88934/curve_def_blur_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4
Brecht Van Lommel was assigned by Lukas Tönne 2014-05-14 19:20:13 +02:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by f44e743c72

This issue was referenced by f44e743c72151946b79306f401a113c468ec1efc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f44e743c72.

Closed by commit f44e743c72.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40194
No description provided.