Fix T40194: cycles deformation motion blur not working with curves + shape keys.